--- a/FCL/src/main/AndroidManifest.xml
+++ b/FCL/src/main/AndroidManifest.xml
@@ -11,9 +11,11 @@
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="29" />
-    <uses-permission
-        android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
-        tools:ignore="ScopedStorage" />
+
+<!--    该权限为超级敏感权限 请勿申请-->
+<!--    <uses-permission-->
+<!--        android:name="android.permission.MANAGE_EXTERNAL_STORAGE"-->
+<!--        tools:ignore="ScopedStorage" />-->
     <uses-permission
         android:name="android.permission.INTERNET" />
     <uses-permission
